--- a/ui/main/components/newProduct/newProduct.ui
+++ b/ui/main/components/newProduct/newProduct.ui
@@ -39,7 +39,7 @@
     <pixmap>C:/Users/Adrian/Downloads/agregar-producto.png</pixmap>
    </property>
   </widget>
-  <widget class="QLabel" name="label_5">
+  <widget class="QLabel" name="lblProductViewTitle">
    <property name="geometry">
     <rect>
      <x>340</x>
@@ -397,7 +397,7 @@ border: none;</string>
    </property>
   </widget>
   <zorder>label_4</zorder>
-  <zorder>label_5</zorder>
+  <zorder>lblProductViewTitle</zorder>
   <zorder>label_2</zorder>
   <zorder>label_3</zorder>
   <zorder>label_6</zorder>
