--- a/ui/main/components/viewProduct/viewProduct.ui
+++ b/ui/main/components/viewProduct/viewProduct.ui
@@ -211,7 +211,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
     <rect>
      <x>180</x>
      <y>280</y>
-     <width>391</width>
+     <width>161</width>
      <height>31</height>
     </rect>
    </property>
@@ -245,7 +245,7 @@ border-radius:2px;</string>
   <widget class="QLineEdit" name="txtProductoPrice">
    <property name="geometry">
     <rect>
-     <x>610</x>
+     <x>380</x>
      <y>280</y>
      <width>201</width>
      <height>31</height>
@@ -281,7 +281,7 @@ border-radius: 2px;</string>
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>610</x>
+     <x>380</x>
      <y>250</y>
      <width>181</width>
      <height>31</height>
@@ -307,7 +307,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>330</y>
+     <y>350</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -386,6 +386,80 @@ border: none;</string>
   <widget class="QLabel" name="errProductoPrice">
    <property name="geometry">
     <rect>
+     <x>380</x>
+     <y>310</y>
+     <width>201</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>610</x>
+     <y>250</y>
+     <width>181</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+hr { height: 1px; border-width: 0; }
+li.unchecked::marker { content: &quot;\2610&quot;; }
+li.checked::marker { content: &quot;\2612&quot;; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:700; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:400; color:#000000;&quot;&gt;Cantidad&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txtProductQuantity">
+   <property name="geometry">
+    <rect>
+     <x>610</x>
+     <y>280</y>
+     <width>201</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="cursor">
+    <cursorShape>IBeamCursor</cursorShape>
+   </property>
+   <property name="toolTip">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#000000;&quot;&gt;Usuario&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="layoutDirection">
+    <enum>Qt::LayoutDirection::LeftToRight</enum>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);
+border: none;
+border: 1px solid #000000;;
+border-radius: 2px;</string>
+   </property>
+   <property name="text">
+    <string>0</string>
+   </property>
+   <property name="placeholderText">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="errProductQuantity">
+   <property name="geometry">
+    <rect>
      <x>610</x>
      <y>310</y>
      <width>201</width>
@@ -412,6 +486,9 @@ border: none;</string>
   <zorder>cbxProductCategory</zorder>
   <zorder>errProductoPrice</zorder>
   <zorder>txtProductoPrice</zorder>
+  <zorder>label_8</zorder>
+  <zorder>errProductQuantity</zorder>
+  <zorder>txtProductQuantity</zorder>
  </widget>
  <resources/>
  <connections/>
