--- a/ui/main/main.ui
+++ b/ui/main/main.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>../Downloads/inventario-disponible.png</normaloff>../Downloads/inventario-disponible.png</iconset>
+    <normaloff>C:/Users/Adrian/Downloads/inventario-disponible.png</normaloff>C:/Users/Adrian/Downloads/inventario-disponible.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
@@ -42,187 +42,6 @@
       <property name="frameShadow">
        <enum>QFrame::Shadow::Raised</enum>
       </property>
-      <widget class="QTableWidget" name="tblProducts">
-       <property name="geometry">
-        <rect>
-         <x>290</x>
-         <y>130</y>
-         <width>531</width>
-         <height>291</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QHeaderView::section {
-    background-color: rgba(170, 255, 200, 0.8); /* Verde pastel más suave */
-    color: rgb(0, 0, 0); 
-    padding: 5px;
-    font-size: 10pt;
-    font-weight: 700;
-}
-
-QHeaderView::section:hover {
-    background-color: rgba(170, 255, 200, 0.6); /* Un poco más transparente al pasar el mouse */
-}
-</string>
-       </property>
-       <column>
-        <property name="text">
-         <string>Nombre</string>
-        </property>
-        <property name="textAlignment">
-         <set>AlignLeading|AlignVCenter</set>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Descripción</string>
-        </property>
-        <property name="textAlignment">
-         <set>AlignLeading|AlignVCenter</set>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Categoria</string>
-        </property>
-        <property name="textAlignment">
-         <set>AlignLeading|AlignVCenter</set>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Precio</string>
-        </property>
-        <property name="textAlignment">
-         <set>AlignLeading|AlignVCenter</set>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>¿Importado?</string>
-        </property>
-        <property name="textAlignment">
-         <set>AlignLeading|AlignVCenter</set>
-        </property>
-       </column>
-      </widget>
-      <widget class="QLabel" name="label_5">
-       <property name="geometry">
-        <rect>
-         <x>40</x>
-         <y>270</y>
-         <width>221</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-hr { height: 1px; border-width: 0; }
-li.unchecked::marker { content: &quot;\2610&quot;; }
-li.checked::marker { content: &quot;\2612&quot;; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:18pt; font-weight:700; color:#000000;&quot;&gt;Lista de productos&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label">
-       <property name="geometry">
-        <rect>
-         <x>100</x>
-         <y>190</y>
-         <width>81</width>
-         <height>81</height>
-        </rect>
-       </property>
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>30</width>
-         <height>30</height>
-        </size>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="pixmap">
-        <pixmap>../Downloads/inventario.png</pixmap>
-       </property>
-       <property name="scaledContents">
-        <bool>true</bool>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="btnUpdateTable">
-       <property name="geometry">
-        <rect>
-         <x>680</x>
-         <y>430</y>
-         <width>141</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(85, 255, 127);
-color: rgb(0, 0, 0);
-border-radius: 10px;
-border: none;</string>
-       </property>
-       <property name="text">
-        <string>Actualizar</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="qleSearch">
-       <property name="geometry">
-        <rect>
-         <x>290</x>
-         <y>90</y>
-         <width>531</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">color: rgb(0, 0, 0);
-border: none;
-border: 1px solid #000000;;
-border-radius: 2px;</string>
-       </property>
-       <property name="placeholderText">
-        <string>Escriba un producto</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_2">
-       <property name="geometry">
-        <rect>
-         <x>290</x>
-         <y>60</y>
-         <width>91</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:700;&quot;&gt;  Buscar&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
-      </widget>
-      <zorder>tblProducts</zorder>
-      <zorder>label_5</zorder>
-      <zorder>label</zorder>
-      <zorder>btnUpdateTable</zorder>
-      <zorder>label_2</zorder>
-      <zorder>qleSearch</zorder>
      </widget>
     </item>
    </layout>
@@ -240,16 +59,33 @@ border-radius: 2px;</string>
     <property name="title">
      <string>Archivo</string>
     </property>
+    <addaction name="btnListProducts"/>
     <addaction name="btnNewProduct"/>
    </widget>
    <addaction name="menuArchive"/>
   </widget>
   <action name="btnNewProduct">
+   <property name="icon">
+    <iconset>
+     <normaloff>C:/Users/Adrian/Downloads/agregar-producto.png</normaloff>C:/Users/Adrian/Downloads/agregar-producto.png</iconset>
+   </property>
    <property name="text">
     <string>Resgistrar producto</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+N</string>
+   </property>
+  </action>
+  <action name="btnListProducts">
+   <property name="icon">
+    <iconset>
+     <normaloff>C:/Users/Adrian/Downloads/inventario-16.png</normaloff>C:/Users/Adrian/Downloads/inventario-16.png</iconset>
+   </property>
+   <property name="text">
+    <string>Ver lista de productos</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+L</string>
    </property>
   </action>
  </widget>
